gitops/gitops-gateway/managed-observability/observability-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  gatewayClassName: cilium
  listeners:

  - hostname: opensearch.local
    name: opensearch-local-http
    port: 9200
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All

  - hostname: observability-disk.podzone.cloud
    name: observability-disk-podzone-cloud-http
    port: 80
    protocol: HTTP
  - hostname: observability-disk.podzone.cloud
    name: observability-disk-podzone-cloud-https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: observability-disk-secret
    allowedRoutes:
      namespaces:
        from: All

  - hostname: observability-network.podzone.cloud
    name: observability-network-podzone-cloud-http
    port: 80
    protocol: HTTP
  - hostname: observability-network.podzone.cloud
    name: observability-network-podzone-cloud-https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: observability-network-secret
    allowedRoutes:
      namespaces:
        from: All

  - hostname: prometheus.podzone.cloud
    name: prometheus-podzone-cloud-http
    port: 80
    protocol: HTTP
  - hostname: prometheus.podzone.cloud
    name: prometheus-podzone-cloud-https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: prometheus-secret
    allowedRoutes:
      namespaces:
        from: All

  - hostname: dashboards.podzone.cloud
    name: dashboards-podzone-cloud-http
    port: 80
    protocol: HTTP
  - hostname: dashboards.podzone.cloud
    name: dashboards-podzone-cloud-https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: dashboards-secret
    allowedRoutes:
      namespaces:
        from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  hostnames:
  - observability-network.podzone.cloud
  parentRefs:
  - name: gateway
    namespace: kube-system
    kind: Gateway
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linstor
  namespace: piraeus-datastore
spec:
  hostnames:
  - observability-disk.podzone.cloud
  parentRefs:
  - name: gateway
    namespace: kube-system
    kind: Gateway
  rules:
  - backendRefs:
    - name: linstor-controller
      port: 3370
    matches:
    - path:
        type: PathPrefix
        value: /
